# gtest_demo

./: CMakeLists.txt  README.md  example_common.cpp
test/: CMakeLists.txt  example_common.cpp  example_subtract.cpp
